deploy: b2a8cec0a9a444bf7d6bfb8878a245cbce652bf6

--- a/api-source/WarcraftLegacies.Source.Setup.Legends.LegendLegion.html
+++ b/api-source/WarcraftLegacies.Source.Setup.Legends.LegendLegion.html
@@ -93,7 +93,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_ANETHERON.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_ANETHERON%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L12">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L11">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_ANETHERON_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_ANETHERON*"></a>
   <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_ANETHERON" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_ANETHERON">LEGEND_ANETHERON</h4>
@@ -123,7 +123,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_ARCHIMONDE.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_ARCHIMONDE%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L11">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L10">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_ARCHIMONDE_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_ARCHIMONDE*"></a>
   <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_ARCHIMONDE" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_ARCHIMONDE">LEGEND_ARCHIMONDE</h4>
@@ -153,7 +153,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_LILIAN.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_LILIAN%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L15">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L14">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_LILIAN_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_LILIAN*"></a>
   <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_LILIAN" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_LILIAN">LEGEND_LILIAN</h4>
@@ -183,7 +183,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_MALGANIS.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_MALGANIS%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L14">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L13">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_MALGANIS_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_MALGANIS*"></a>
   <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_MALGANIS" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_MALGANIS">LEGEND_MALGANIS</h4>
@@ -213,7 +213,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_TICHONDRIUS.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_TICHONDRIUS%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L13">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L12">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_TICHONDRIUS_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_TICHONDRIUS*"></a>
   <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGEND_TICHONDRIUS" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGEND_TICHONDRIUS">LEGEND_TICHONDRIUS</h4>
@@ -240,18 +240,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGION_NEXUS_NORTHREND.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGION_NEXUS_NORTHREND%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LegionNexusAlterac.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LegionNexusAlterac%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L16">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGION_NEXUS_NORTHREND_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGION_NEXUS_NORTHREND*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGION_NEXUS_NORTHREND" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGION_NEXUS_NORTHREND">LEGION_NEXUS_NORTHREND</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LegionNexusAlterac_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LegionNexusAlterac*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LegionNexusAlterac" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LegionNexusAlterac">LegionNexusAlterac</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Capital LEGION_NEXUS_NORTHREND { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Capital LegionNexusAlterac { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -270,18 +270,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGION_NEXUS_OUTLAND.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGION_NEXUS_OUTLAND%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_LegionNexusNorthrend.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.LegionNexusNorthrend%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L17">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L15">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGION_NEXUS_OUTLAND_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGION_NEXUS_OUTLAND*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LEGION_NEXUS_OUTLAND" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LEGION_NEXUS_OUTLAND">LEGION_NEXUS_OUTLAND</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LegionNexusNorthrend_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LegionNexusNorthrend*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_LegionNexusNorthrend" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.LegionNexusNorthrend">LegionNexusNorthrend</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Capital LEGION_NEXUS_OUTLAND { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Capital LegionNexusNorthrend { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -305,7 +305,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion_Setup_MacroTools_PreplacedUnitSystem_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion.Setup(MacroTools.PreplacedUnitSystem)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L19">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L18">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_Setup_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.Setup*"></a>
   <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendLegion_Setup_MacroTools_PreplacedUnitSystem_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendLegion.Setup(MacroTools.PreplacedUnitSystem)">Setup(PreplacedUnitSystem)</h4>
@@ -343,7 +343,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendLegion.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendLegion%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L9" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendLegion.cs/#L8" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
