deploy: 0096ce616228af689198c33b20f953f1b7d59160

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1074,6 +1074,9 @@
                               <a href="WarcraftLegacies.Source.Setup.ControlPointSetup.html" name="" title="ControlPointSetup">ControlPointSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.DarkPortalControlNexusSetup.html" name="" title="DarkPortalControlNexusSetup">DarkPortalControlNexusSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.DemonGateSetup.html" name="" title="DemonGateSetup">DemonGateSetup</a>
                           </li>
                           <li>
