deploy: 5d6da3cbe4db25d18f0eef21830f7c25b9f5efa8

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -503,6 +503,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.html" name="" title="QuestHellfireCitadel">QuestHellfireCitadel</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.html" name="" title="QuestRebuildBlackTemple">QuestRebuildBlackTemple</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
@@ -732,6 +735,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestADestinyofFlameandSorrow.html" name="" title="QuestADestinyofFlameandSorrow">QuestADestinyofFlameandSorrow</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple.html" name="" title="QuestBlackTemple">QuestBlackTemple</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestEyeofSargeras.html" name="" title="QuestEyeofSargeras">QuestEyeofSargeras</a>
                           </li>
                           <li>
@@ -741,13 +747,10 @@
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestLostOnes.html" name="" title="QuestLostOnes">QuestLostOnes</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestMurmur.html" name="" title="QuestMurmur">QuestMurmur</a>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestNajentus.html" name="" title="QuestNajentus">QuestNajentus</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestSuramar.html" name="" title="QuestSuramar">QuestSuramar</a>
                           </li>
                     </ul>
                 </li>
