deploy: 94012523db0329f3ed5c3f4fa9ec9b23576ff407

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -720,6 +720,9 @@
                               <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveControlUnit.html" name="" title="ObjectiveControlUnit">ObjectiveControlUnit</a>
                           </li>
                           <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveDamagePlayer.html" name="" title="ObjectiveDamagePlayer">ObjectiveDamagePlayer</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveDontCompleteQuest.html" name="" title="ObjectiveDontCompleteQuest">ObjectiveDontCompleteQuest</a>
                           </li>
                           <li>
@@ -754,6 +757,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveLegendLevel.html" name="" title="ObjectiveLegendLevel">ObjectiveLegendLevel</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveLegendMeetsLegend.html" name="" title="ObjectiveLegendMeetsLegend">ObjectiveLegendMeetsLegend</a>
                           </li>
                           <li>
                               <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveLegendNotPermanentlyDead.html" name="" title="ObjectiveLegendNotPermanentlyDead">ObjectiveLegendNotPermanentlyDead</a>
