--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -104,10 +104,16 @@
                               <a href="WarcraftLegacies.Source.Dialogue.DruidsDialogueSetup.html" name="" title="DruidsDialogueSetup">DruidsDialogueSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.html" name="" title="IllidariDialogueSetup">IllidariDialogueSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Dialogue.LordaeronDialogueSetup.html" name="" title="LordaeronDialogueSetup">LordaeronDialogueSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Dialogue.ScourgeDialogueSetup.html" name="" title="ScourgeDialogueSetup">ScourgeDialogueSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.SentinelsDialogueSetup.html" name="" title="SentinelsDialogueSetup">SentinelsDialogueSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Dialogue.WarsongDialogueSetup.html" name="" title="WarsongDialogueSetup">WarsongDialogueSetup</a>
