deploy: c129b6261d7706fc50cb4eef989553fd60dda6d7

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -401,7 +401,16 @@
                               <a href="MacroTools.DialogueSystem.Dialogue.html" name="" title="Dialogue">Dialogue</a>
                           </li>
                           <li>
-                              <a href="MacroTools.DialogueSystem.DialogueManager.html" name="" title="DialogueManager">DialogueManager</a>
+                              <a href="MacroTools.DialogueSystem.DialogueSequence.html" name="" title="DialogueSequence">DialogueSequence</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.DialogueSystem.IHasPlayableDialogue.html" name="" title="IHasPlayableDialogue">IHasPlayableDialogue</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.DialogueSystem.TriggeredDialogue.html" name="" title="TriggeredDialogue">TriggeredDialogue</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.DialogueSystem.TriggeredDialogueManager.html" name="" title="TriggeredDialogueManager">TriggeredDialogueManager</a>
                           </li>
                     </ul>
                 </li>
