--- a/api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.html
@@ -73,7 +73,8 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple" class="text-break">Class QuestRebuildBlackTemple
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>Construct various buildings near the Black Temple to gain resources</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -115,7 +116,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple__ctor_Rectangle_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.%23ctor(Rectangle)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L16">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L18">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple__ctor_" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple__ctor_Rectangle_" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.#ctor(Rectangle)">QuestRebuildBlackTemple(Rectangle)</h4>
@@ -150,7 +151,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_CompletionPopup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.CompletionPopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L36">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L38">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_CompletionPopup_" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.CompletionPopup*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_CompletionPopup" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.CompletionPopup">CompletionPopup</h4>
@@ -182,7 +183,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L39">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L41">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.RewardDescription">RewardDescription</h4>
@@ -216,7 +217,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_OnComplete_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.OnComplete(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L26">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L28">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_OnComplete_" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.OnComplete*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_OnComplete_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.OnComplete(MacroTools.FactionSystem.Faction)">OnComplete(Faction)</h4>
@@ -254,7 +255,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L10" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Fel Horde/QuestRebuildBlackTemple.cs/#L12" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
