--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -104,6 +104,9 @@
                               <a href="WarcraftLegacies.Source.Dialogue.DruidsDialogueSetup.html" name="" title="DruidsDialogueSetup">DruidsDialogueSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.FrostwolfDialogueSetup.html" name="" title="FrostwolfDialogueSetup">FrostwolfDialogueSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.html" name="" title="IllidariDialogueSetup">IllidariDialogueSetup</a>
                           </li>
                           <li>
