--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -110,6 +110,9 @@
                               <a href="WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.html" name="" title="IllidariDialogueSetup">IllidariDialogueSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.html" name="" title="LegionDialogueSeup">LegionDialogueSeup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Dialogue.LordaeronDialogueSetup.html" name="" title="LordaeronDialogueSetup">LordaeronDialogueSetup</a>
                           </li>
                           <li>
