deploy: cb12d91aa1ac1053834ddd50861edb277dedb4e5

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -101,6 +101,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.html" name="" title="DalaranDialogueSetup">DalaranDialogueSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Dialogue.DruidsDialogueSetup.html" name="" title="DruidsDialogueSetup">DruidsDialogueSetup</a>
                           </li>
                           <li>
