deploy: 56a418903536b42b40333bc1bc9dfa52ef314a57

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -290,9 +290,6 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="WarcraftLegacies.Source.Mechanics.Scourge.EventKelthuzadDeath.html" name="" title="EventKelthuzadDeath">EventKelthuzadDeath</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Mechanics.Scourge.HelmOfDominationDropsWhenScourgeLeaves.html" name="" title="HelmOfDominationDropsWhenScourgeLeaves">HelmOfDominationDropsWhenScourgeLeaves</a>
                           </li>
                           <li>
@@ -825,7 +822,10 @@
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestDrakUnlock.html" name="" title="QuestDrakUnlock">QuestDrakUnlock</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Scourge.QuestKelthuzad.html" name="" title="QuestKelthuzad">QuestKelthuzad</a>
+                              <a href="WarcraftLegacies.Source.Quests.Scourge.QuestKelthuzadDies.html" name="" title="QuestKelthuzadDies">QuestKelthuzadDies</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Scourge.QuestKelthuzadLich.html" name="" title="QuestKelthuzadLich">QuestKelthuzadLich</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestLichKingArthas.html" name="" title="QuestLichKingArthas">QuestLichKingArthas</a>
