deploy: 71e0a3c8f51f0ed949d963e1a32146d723ee8ad2

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -119,6 +119,9 @@
                               <a href="WarcraftLegacies.Source.Dialogue.LordaeronDialogueSetup.html" name="" title="LordaeronDialogueSetup">LordaeronDialogueSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.html" name="" title="QuelthalasDialogueSetup">QuelthalasDialogueSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Dialogue.ScourgeDialogueSetup.html" name="" title="ScourgeDialogueSetup">ScourgeDialogueSetup</a>
                           </li>
                           <li>
