deploy: afa6dcc45c1ea141146fa8bcf0f2e5e07a61293c

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -663,9 +663,6 @@
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestBoralus.html" name="" title="QuestBoralus">QuestBoralus</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestJoinCrusade.html" name="" title="QuestJoinCrusade">QuestJoinCrusade</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestSafeSea.html" name="" title="QuestSafeSea">QuestSafeSea</a>
                           </li>
                           <li>
@@ -772,19 +769,13 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestGreatTreachery.html" name="" title="QuestGreatTreachery">QuestGreatTreachery</a>
+                              <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestForgottenKnowledge.html" name="" title="QuestForgottenKnowledge">QuestForgottenKnowledge</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestQueldanil.html" name="" title="QuestQueldanil">QuestQueldanil</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestSilvermoon.html" name="" title="QuestSilvermoon">QuestSilvermoon</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestSummonKil.html" name="" title="QuestSummonKil">QuestSummonKil</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestTempestKeep.html" name="" title="QuestTempestKeep">QuestTempestKeep</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestTheBloodElves.html" name="" title="QuestTheBloodElves">QuestTheBloodElves</a>
