deploy: d72db6e63e8f5c227ce4783b319690b0ca548fa1

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -563,10 +563,10 @@
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestFreeNerzhul.html" name="" title="QuestFreeNerzhul">QuestFreeNerzhul</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestRexxar.html" name="" title="QuestRexxar">QuestRexxar</a>
+                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestRoyalPlunder.html" name="" title="QuestRoyalPlunder">QuestRoyalPlunder</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestRoyalPlunder.html" name="" title="QuestRoyalPlunder">QuestRoyalPlunder</a>
+                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html" name="" title="QuestStonemaul">QuestStonemaul</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestThunderBluff.html" name="" title="QuestThunderBluff">QuestThunderBluff</a>
@@ -770,6 +770,9 @@
                     <ul class="nav level2">
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestForgottenKnowledge.html" name="" title="QuestForgottenKnowledge">QuestForgottenKnowledge</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestQueensArchive.html" name="" title="QuestQueensArchive">QuestQueensArchive</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestQueldanil.html" name="" title="QuestQueldanil">QuestQueldanil</a>
