deploy: e9d2687c66d620ee307fafc105b132dd93b18c43

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -983,6 +983,9 @@
                               <a href="WarcraftLegacies.Source.Researches.Revenants.html" name="" title="Revenants">Revenants</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Researches.SunfuryWarrior.html" name="" title="SunfuryWarrior">SunfuryWarrior</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Researches.VeteranFootmen.html" name="" title="VeteranFootmen">VeteranFootmen</a>
                           </li>
                     </ul>
