deploy: f9b8a3dab1f618141c661cffa488f22e540d1ee9

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -435,6 +435,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestRepairExodarHull.html" name="" title="QuestRepairExodarHull">QuestRepairExodarHull</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html" name="" title="QuestRepairGenerator">QuestRepairGenerator</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestShipArgus.html" name="" title="QuestShipArgus">QuestShipArgus</a>
                           </li>
                           <li>
