--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -1179,6 +1179,9 @@
                               <a href="MacroTools.SpellSystem.DummyCaster.html" name="" title="DummyCaster">DummyCaster</a>
                           </li>
                           <li>
+                              <a href="MacroTools.SpellSystem.DummyCastOriginType.html" name="" title="DummyCastOriginType">DummyCastOriginType</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.SpellSystem.Hazard.html" name="" title="Hazard">Hazard</a>
                           </li>
                           <li>
