deploy: b3cadea91f19ff21dd4e3daea97e732a50676483

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -110,6 +110,9 @@
                               <a href="WarcraftLegacies.Source.Dialogue.FrostwolfDialogueSetup.html" name="" title="FrostwolfDialogueSetup">FrostwolfDialogueSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.html" name="" title="GoblinDialogueSetup">GoblinDialogueSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.html" name="" title="IllidariDialogueSetup">IllidariDialogueSetup</a>
                           </li>
                           <li>
