deploy: 47569e31f15ddb85944bcd0b0f2c60d45edd87b6

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -116,6 +116,9 @@
                               <a href="WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.html" name="" title="IllidariDialogueSetup">IllidariDialogueSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.html" name="" title="KultirasDialogueSetup">KultirasDialogueSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.html" name="" title="LegionDialogueSeup">LegionDialogueSeup</a>
                           </li>
                           <li>
