--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1068,6 +1068,9 @@
                               <a href="WarcraftLegacies.Source.Setup.AugmentSetup.html" name="" title="AugmentSetup">AugmentSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.BlackPortalControlNexusSetup.html" name="" title="BlackPortalControlNexusSetup">BlackPortalControlNexusSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.BlockerSetup.html" name="" title="BlockerSetup">BlockerSetup</a>
                           </li>
                           <li>
