deploy: 77c4b5cd02618236a774c4624b412a26dea1fb02

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -647,6 +647,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Ironforge.QuestDunMorogh.html" name="" title="QuestDunMorogh">QuestDunMorogh</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Ironforge.QuestExpedition.html" name="" title="QuestExpedition">QuestExpedition</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Ironforge.QuestGnomeregan.html" name="" title="QuestGnomeregan">QuestGnomeregan</a>
                           </li>
                           <li>
