deploy: dae2ff732a725603c2a33ab9e13be30b0bc84bc5

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -73,9 +73,6 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="WarcraftLegacies.Source.Commands.AllianceActive.html" name="" title="AllianceActive">AllianceActive</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Commands.InviteCommand.html" name="" title="InviteCommand">InviteCommand</a>
                           </li>
                           <li>
@@ -197,22 +194,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.GameLogic.GameEnd.PlayerLeaves.html" name="" title="PlayerLeaves">PlayerLeaves</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.GameLogic.GameEnd.VictoryDefeat.html" name="" title="VictoryDefeat">VictoryDefeat</a>
-                          </li>
-                    </ul>
-                </li>
-                <li>
-                    <span class="expand-stub"></span>
-                    <a href="WarcraftLegacies.Source.Hints.html" name="" title="WarcraftLegacies.Source.Hints">WarcraftLegacies.Source.Hints</a>
-                    
-                    <ul class="nav level2">
-                          <li>
-                              <a href="WarcraftLegacies.Source.Hints.HintConfig.html" name="" title="HintConfig">HintConfig</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Hints.HintVictory.html" name="" title="HintVictory">HintVictory</a>
                           </li>
                     </ul>
                 </li>
@@ -1111,6 +1092,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.GateSetup.html" name="" title="GateSetup">GateSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.HintConfig.html" name="" title="HintConfig">HintConfig</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.IncompatibleResearchSetup.html" name="" title="IncompatibleResearchSetup">IncompatibleResearchSetup</a>
