deploy: 9c590ccebf1540d0a1286a20fba91c52c0835320

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1400,6 +1400,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.StormwindSpellSetup.html" name="" title="StormwindSpellSetup">StormwindSpellSetup</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.WarsongSpellSetup.html" name="" title="WarsongSpellSetup">WarsongSpellSetup</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
