--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -988,9 +988,6 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Researches.Ironforge.DeeprunTram.html" name="" title="DeeprunTram">DeeprunTram</a>
                           </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Researches.Ironforge.TitanForgeArtifact.html" name="" title="TitanForgeArtifact">TitanForgeArtifact</a>
-                          </li>
                     </ul>
                 </li>
                 <li>
@@ -1383,6 +1380,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Spells.IllidariSpellSetup.html" name="" title="IllidariSpellSetup">IllidariSpellSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.IronforgeSpellSetup.html" name="" title="IronforgeSpellSetup">IronforgeSpellSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.KulTirasSpellSetup.html" name="" title="KulTirasSpellSetup">KulTirasSpellSetup</a>
                           </li>
                           <li>
@@ -1415,6 +1415,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Spells.PingOilDeposits.html" name="" title="PingOilDeposits">PingOilDeposits</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Spells.TitanForgeArtifact.html" name="" title="TitanForgeArtifact">TitanForgeArtifact</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Spells.WeaponEmpowerment.html" name="" title="WeaponEmpowerment">WeaponEmpowerment</a>
