deploy: 4f1f0068a9c882a3e1b2819631cb5d3cd43880a1

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1414,6 +1414,9 @@
                               <a href="WarcraftLegacies.Source.Spells.ExtractSunwellVial.html" name="" title="ExtractSunwellVial">ExtractSunwellVial</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Spells.MakeCasterVulnerable.html" name="" title="MakeCasterVulnerable">MakeCasterVulnerable</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Spells.PingOilDeposits.html" name="" title="PingOilDeposits">PingOilDeposits</a>
                           </li>
                           <li>
