deploy: aff76286bca036c5b461813ad7d4242bd93d90e7

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -669,6 +669,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Legion.QuestAlteracBase.html" name="" title="QuestAlteracBase">QuestAlteracBase</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestArgusControl.html" name="" title="QuestArgusControl">QuestArgusControl</a>
                           </li>
                           <li>
@@ -816,9 +819,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestLichKingArthas.html" name="" title="QuestLichKingArthas">QuestLichKingArthas</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Scourge.QuestNaxxramas.html" name="" title="QuestNaxxramas">QuestNaxxramas</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestPlague.html" name="" title="QuestPlague">QuestPlague</a>
