deploy: 4b8d2a0140c97aea6a7e71b55be90f7942183dd9

--- a/api-source/WarcraftLegacies.Source.Quests.Warsong.QuestChenStormstout.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Warsong.QuestChenStormstout.html
@@ -73,7 +73,7 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_Warsong_QuestChenStormstout" data-uid="WarcraftLegacies.Source.Quests.Warsong.QuestChenStormstout" class="text-break">Class QuestChenStormstout
   </h1>
-  <div class="markdown level0 summary"><p>Chen Stormstout joins the Warsong when a Warsong unit approaches him.</p>
+  <div class="markdown level0 summary"><p>Chen Stormstout becomes available for training at the Warsong Altar.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
